objects/Recap_Product__c.object
<CustomObject>
    <fields>
        <fullName>DMS_Type__c</fullName>
        <label>DMS Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACS Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Alliance Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Alliance Server based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Alliance Web Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP ARG formerly EDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Elite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona AKA Dealertrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Dealer Systems (AKA Frontier.net)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoMan (Meadowlands Systems)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoMate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta Sigma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPC Systems Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPS Dealer Product Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubuque Data Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galaxy 2000 (System 2000)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage Keeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genesys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDS Astra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jarvis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karmak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L&apos;AutoPak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightyear AKA Dealerbuilt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS_Username__c</fullName>
        <label>DMS Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Vehicle_Repair_Order__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>DMS Vehicle Repair Order #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Vehicle_Sales_Order__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>DMS Vehicle Sales Order #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealers_in_LMA__c</fullName>
        <label># of Dealers in LMA</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealership_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealership Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_National_Incentive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Default National Incentive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Site_1__c</fullName>
        <label>Demo Site 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Demo_Site_2__c</fullName>
        <label>Demo Site 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Demo_Site_3__c</fullName>
        <label>Demo Site 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Demo_Site_Notes_1__c</fullName>
        <inlineHelpText>Tell us what your client likes about this website and would like to see on their own website.</inlineHelpText>
        <label>Demo Site Notes 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Site_Notes_2__c</fullName>
        <inlineHelpText>Tell us what your client likes about this website - what they would like carried over to their own site.</inlineHelpText>
        <label>Demo Site Notes 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Site_Notes_3__c</fullName>
        <inlineHelpText>Tell us what your client likes about this website and would like to see on their own website.</inlineHelpText>
        <label>Demo Site Notes 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Design</label>
        <picklist>
            <controllingField>OEM__c</controllingField>
            <picklistValues>
                <fullName>Altair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW Endorsed 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick GMC Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capella</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glacier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada Accelera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada Edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada Endorsed 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada Endorsed 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada Panorama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden Uluru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai Endorsed 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai Endorsed 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai Flex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia Endorsed 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia Endorsed 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia Endorsed 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Endorsed 11 V 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Endorsed 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Endorsed 5 V 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Endorsed 6 V 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Endorsed 8 V 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Endorsed 9 V 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI Endorsed 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI WIN Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-brand Experience</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_Dial_Number__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Direct Dial Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Domain_1_Authorization_Code__c</fullName>
        <inlineHelpText>Either a Username and Password OR an Authorization Code will be required if the dealership is transfering an existing domain.</inlineHelpText>
        <label>Domain 1 Authorization Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_1_Email_Boxes__c</fullName>
        <inlineHelpText>Please make sure to expand this list - only the first 7 lines will display.</inlineHelpText>
        <label>Domain 1 Email Boxes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domain_1_MX_Record__c</fullName>
        <label>Domain 1 MX Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_1_Password__c</fullName>
        <label>Domain 1 Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_1_Registrar__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Domain 1 Registrar</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_1_Transfer_Email__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Domain 1 Transfer Email</label>
        <picklist>
            <controllingField>Domain_1_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_1_Type__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Domain 1 Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Owned - DNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Owned - IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_1_URL__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Domain 1 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Domain_1_Username__c</fullName>
        <inlineHelpText>Either a Username and Password OR an Authorization Code will be required if the dealership is transfering an existing domain.</inlineHelpText>
        <label>Domain 1 Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_2_Authorization_Code__c</fullName>
        <inlineHelpText>Either a Username and Password OR an Authorization Code will be required if the dealership is transfering an existing domain.</inlineHelpText>
        <label>Domain 2 Authorization Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_2_Email_Boxes__c</fullName>
        <inlineHelpText>Please make sure to expand this list - only the first 7 lines will display.</inlineHelpText>
        <label>Domain 2 Email Boxes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domain_2_MX_Record__c</fullName>
        <label>Domain 2 MX Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_2_Password__c</fullName>
        <label>Domain 2 Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_2_Registrar__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Domain 2 Registrar</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_2_Transfer_Email__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Domain 2 Transfer Email</label>
        <picklist>
            <controllingField>Domain_2_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_2_Type__c</fullName>
        <label>Domain 2 Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Owned - DNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Owned - IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_2_URL__c</fullName>
        <label>Domain 2 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Domain_2_Username__c</fullName>
        <inlineHelpText>Either a Username and Password OR an Authorization Code will be required if the dealership is transfering an existing domain.</inlineHelpText>
        <label>Domain 2 Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Contact_Details__c</fullName>
        <formula>IF(NOT(ISBLANK( Domain_Contact__r.Email )), Domain_Contact__r.Email &amp; BR(), &quot;&quot;) &amp; IF(NOT(ISBLANK(Domain_Contact__r.Phone)), Domain_Contact__r.Phone &amp; &quot; (Phone)&quot; &amp; BR(), &quot;&quot;) &amp; IF(NOT(ISBLANK( Domain_Contact__r.MobilePhone)), Domain_Contact__r.MobilePhone &amp; &quot; (Mobile)&quot;, &quot;&quot;)</formula>
        <label>Domain Contact Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domain Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Recap_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recap Products (Domain Contact)</relationshipLabel>
        <relationshipName>Recap_ProductsugWs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domain_Option__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Domain Option</label>
        <picklist>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repoint via A-record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point DNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Edmunds_Password__c</fullName>
        <label>Edmunds Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edmunds_Username__c</fullName>
        <label>Edmunds Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edmunds__c</fullName>
        <label>Edmunds</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Excluded_Brand__c</fullName>
        <label>Excluded Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maserati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Export_Destinations__c</fullName>
        <label>Export Destinations (up to 30)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>F_I__c</fullName>
        <label>F&amp;I</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Password__c</fullName>
        <label>Facebook Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_URL__c</fullName>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Facebook_Username__c</fullName>
        <label>Facebook Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Finance</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GM_DP_Contact_Details__c</fullName>
        <formula>IF(NOT(ISBLANK( GM_DP_Contact_Name__r.Email )), GM_DP_Contact_Name__r.Email &amp; BR(), &quot;&quot;) &amp; IF(NOT(ISBLANK(GM_DP_Contact_Name__r.Phone)), GM_DP_Contact_Name__r.Phone &amp; &quot; (Phone)&quot; &amp; BR(), &quot;&quot;) &amp; IF(NOT(ISBLANK( GM_DP_Contact_Name__r.MobilePhone)), GM_DP_Contact_Name__r.MobilePhone &amp; &quot; (Mobile)&quot;, &quot;&quot;)</formula>
        <label>GM/DP Contact Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_DP_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GM/DP Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Recap_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recap Products (GM/DP Contact Name)</relationshipLabel>
        <relationshipName>Recap_ProductsugXH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Generic_Mock_Up_Presented__c</fullName>
        <inlineHelpText>Has a national template mock up been presented to the LMA without an offer or LMA logo?</inlineHelpText>
        <label>Generic Mock Up Presented</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_Local_Password__c</fullName>
        <label>Google Local Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Local_URL__c</fullName>
        <label>Google Local URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Google_Local_Username__c</fullName>
        <label>Google Local Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Password__c</fullName>
        <label>Google+ Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_URL__c</fullName>
        <label>Google+ URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Google_Username__c</fullName>
        <label>Google+ Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insider_Pages_Password__c</fullName>
        <label>Insider Pages Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insider_Pages_Username__c</fullName>
        <label>Insider Pages Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insider_Pages__c</fullName>
        <label>Insider Pages</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Inventory_Comments__c</fullName>
        <label>Inventory Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inventory_Contact_Details__c</fullName>
        <formula>IF(NOT(ISBLANK( Inventory_Contact__r.Email )), Inventory_Contact__r.Email &amp; BR(), &quot;&quot;) &amp; IF(NOT(ISBLANK(Inventory_Contact__r.Phone)), Inventory_Contact__r.Phone &amp; &quot; (Phone)&quot; &amp; BR(), &quot;&quot;) &amp; IF(NOT(ISBLANK( Inventory_Contact__r.MobilePhone)), Inventory_Contact__r.MobilePhone &amp; &quot; (Mobile)&quot;, &quot;&quot;)</formula>
        <label>Inventory Contact Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Recap_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>BMW CPO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recap Products (Inventory Contact)</relationshipLabel>
        <relationshipName>Recap_ProductsugX7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Type__c</fullName>
        <label>Inventory Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preowned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LMA_Code__c</fullName>
        <formula>Recap_Account__r.LMA_Code__c</formula>
        <label>LMA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Health__c</fullName>
        <inlineHelpText>How is the LMAs health with Cobalt? Red - frustrated, yellow - no critical issues, green - positive.</inlineHelpText>
        <label>LMA Health</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LMA_History_Overview__c</fullName>
        <inlineHelpText>Please list any relevant advertising history for the LMA. What type of advertising have they been doing, who do they usually partner with, do they leverage tv?</inlineHelpText>
        <label>LMA History Overview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Hurts__c</fullName>
        <label>LMA Hurts</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LMA_Logo_Attached__c</fullName>
        <label>LMA Logo Attached</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LMA_Meeting_Date__c</fullName>
        <label>LMA Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMA_President_Email__c</fullName>
        <formula>LMA_President_Name__r.Email</formula>
        <label>LMA President Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_President_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA President Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recap Products (LMA President Name)</relationshipLabel>
        <relationshipName>Recap_Products3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_President_Phone__c</fullName>
        <formula>LMA_President_Name__r.Phone</formula>
        <label>LMA President Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Strategist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Strategist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recap_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Super_Group__c</fullName>
        <label>LMA Super Group</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>